--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
-    background: #2B1887;
+    background: #ffffff;
 }
 
 .sidebar {
@@ -112,7 +112,7 @@ body {
 /* ! ========================= */
 /* !À revoir après le code php */
 
-.task {
+.task-list .task {
     margin-bottom: 10px;
 }
 
